# SimWorld-Studio-main

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  INTERNAL_SETUP.md  LICENSE  README.md  SimWorld-Studio-Mac.sh  SimWorld-Studio.bat  SimWorld-Studio.ps1  SimWorld-Studio.sh  SimWorld_Studio.ipynb  build.sh  grab_depth.py  l3_skills.json  package_simworld_minimal.sh  patch_server.js  test_map_scene_graph.json  version.json  运行.md
.claude/: settings.local.json
docs/design/: README.md
docs/product/: api_contract.md  architecture.md  codex_tasks.md  completion_status.md  deepseek_qwen_colab_implementation.md  ui_modes.md
packaging/: MANIFEST.in  pyproject.toml
packaging/simworld_arena/: __init__.py  launcher.py  version.py
packaging/simworld_arena/config/: arena_default.yaml
packaging/simworld_arena/server/: agents.js  assets.json  index.js  index.js.bak  mcp-server.js  package.json  scenes.js
packaging/simworld_arena/skills/builtin/: building_placement.md  city_layout.md  weather_mood.md
simworld_studio_workspace/: allow_ai_maps.md  cirrus-config-koe.json  cirrus-config.json  mock_responses.txt  test_map_scene_graph.json
simworld_studio_workspace/co_evolve/: README.md  __init__.py  __main__.py  checkpoint.py  co_evolve_revised_plan.md  coding_agent.py  coding_memory.py  config.py  context_manager.py  difficulty.py  feedback.py  loop.py  plot_heatmap.py  scene_manager.py  sim_env.py  simulate_curriculum.py  teacher.py  ue_launcher.py  visualize.py
static_scene_eval/: README.md  anthropic_proxy.py  evaluate_all.py  mcp.json.example  run_eval.py
(+16196 files in other folders)
